--- a/src/app/styles/home.module.css
+++ b/src/app/styles/home.module.css
@@ -5,5 +5,25 @@
     font-family:Julius Sans One;
     font-size: 50px;
     font-weight: 800;
-    color: rgb(66, 66, 66);
+    color: rgb(180, 179, 179);
+}
+
+.cards{
+    width: 100%;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 10px;
+    background-color: rgb(47, 55, 65);
+    padding: 40px;
+    border-radius: 10px;
+}
+
+.webbox{
+    width: 95%;
+    margin: auto;
+}
+
+.foot{
+    margin-top: 50px;
 }
