--- a/src/app/styles/home.module.css
+++ b/src/app/styles/home.module.css
@@ -14,8 +14,8 @@
     display: grid;
     grid-template-columns: repeat(3,1fr);
     gap: 10px;
-    background-color: rgb(47, 55, 65);
-    padding: 40px;
+    /* background-color: rgb(47, 55, 65); */
+    /* padding: 40px; */
     border-radius: 10px;
 }
 
