responsive done and ga4 pending

--- a/src/app/styles/home.module.css
+++ b/src/app/styles/home.module.css
@@ -6,6 +6,8 @@
     font-size: 50px;
     font-weight: 800;
     color: rgb(180, 179, 179);
+    /* margin-top: 50px; */
+    text-align: center;
 }
 
 .cards{
