--- a/src/app/styles/navbar.module.css
+++ b/src/app/styles/navbar.module.css
@@ -4,7 +4,7 @@
 .navdiv{
    
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px; 
-    width: 100%;
+    /* width: 100%;    */
     background: rgba(235, 235, 235, 0.9);
 }
 
@@ -18,13 +18,13 @@
     /* border: 1px solid black; */
 }
 
-.main{
-    width: 6%;
+/* .main{
+    width: 7%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     
-}
+} */
 
 
 /* this is for text of middle */
