--- a/src/app/styles/home.module.css
+++ b/src/app/styles/home.module.css
@@ -5,7 +5,8 @@
     font-family:Julius Sans One;
     font-size: 50px;
     font-weight: 800;
-    color: rgb(180, 179, 179);
+    /* color: rgb(180, 179, 179); */
+    color: rgb(236 254 255 );
     /* margin-top: 50px; */
     text-align: center;
 }
