--- a/src/app/styles/home.module.css
+++ b/src/app/styles/home.module.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@300&family=Julius+Sans+One&display=swap');
 
 .headings{
-    font-family:Julius Sans One;
+    font-family:Julius Sans One,sans-serif;
     font-size: 50px;
     font-weight: 800;
     /* color: rgb(180, 179, 179); */
